force-app/main/default/objects/G4G_Gics__c/G4G_Gics__c.object-meta.xml
<CustomObject>
    <label>Gic</label>
    <nameField>
        <label>Gics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>