force-app/main/default/objects/G4G_Gics__c/fields/G4G_Active__c.field-meta.xml
<CustomField>
    <fullName>G4G_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>