force-app/main/default/objects/G4G_Gics__c/fields/G4G_IndustryFX__c.field-meta.xml
<CustomField>
    <fullName>G4G_IndustryFX__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry</label>
    <referenceTo>G4G_Gics__c</referenceTo>
    <relationshipLabel>Gics</relationshipLabel>
    <relationshipName>Gics</relationshipName>
    <type>Lookup</type>
</CustomField>