force-app/main/default/objects/G4G_Gics__c/fields/G4G_Parent__c.field-meta.xml
<CustomField>
    <fullName>G4G_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>G4G_Gics__c</referenceTo>
    <relationshipLabel>Gics (Parent)</relationshipLabel>
    <relationshipName>Gics1</relationshipName>
    <type>Lookup</type>
</CustomField>