force-app/main/default/objects/G4G_Gics__c/recordTypes/G4G_Industry.recordType-meta.xml
<RecordType>
    <fullName>G4G_Industry</fullName>
    <active>true</active>
    <label>Industry</label>
</RecordType>