force-app/main/default/objects/G4G_Gics__c/recordTypes/G4G_SubIndustry.recordType-meta.xml
<RecordType>
    <fullName>G4G_SubIndustry</fullName>
    <active>true</active>
    <label>Sub-Industry</label>
</RecordType>